--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Polygraphia elevator</title>
 </head>
-<body>
-    
+<body style="text-align: center;">
+    <canvas width="400" height="600" id="canvas"></canvas>
+    <script src="scripts.js"></script>
 </body>
 </html>
